--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <h3>Mom</h3>
       <hr>
       <br>
-      <h3>Dad</h3><hr>
+      <h3>Brother</h3><hr>
       <br><br>
       <label>Webcam View - </label>
       <div id="camera"></div>
