--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 <h3>Me</h3>
 <hr>
       <br>
-      <h3>Dad</h3><hr>
+      <h3>My Mom</h3><hr>
       <br>
-      <h3>Mom</h3>
+      <h3>My Dad</h3>
       <hr>
       <br>
-      <h3>Brother</h3><hr>
+      <h3>My Brother</h3><hr>
       <br><br>
       <label>Webcam View - </label>
       <div id="camera"></div>
@@ -45,8 +45,8 @@
       <label> Picture View-</label>
       <div id="picture"></div>
 
-      <p style="font-size: 22px;">Object : <h4 id="Object"></h4> </p>
-      <p style="font-size: 22px;">Accuracy : <h4 id="Accuracy"></h4></p>
+      <p style="font-size: 22px;">Object : <span id="Object"></span> </p>
+      <p style="font-size: 22px;">Accuracy : <span id="Accuracy"></span></p>
     </center>
 
   </div>
